# bitpared

./: CMakeLists.txt  README.md
src/: bitpared.h  demo.cpp
unittest/: CMakeLists.txt  bitparedtest.cpp  input.aln
